--- a/style.css
+++ b/style.css
@@ -7,6 +7,67 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;
+  color: hsla(0deg, 0%, 0%, 1);
+  background: hsla(0deg, 0%, 100%, 1);
 }
 
 /* Add styles here! */
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.2;
+  margin: 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+  line-height: 1.2;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin: 1rem 0;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+strong {
+  color: hsla(160deg, 100%, 30%, 1);
+}
+
+main {
+  background: hsla(0deg, 0%, 40%, 1);
+  border-top: 8px solid hsla(0deg, 0%, 60%, 1);
+  padding: 64px 0;
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  min-width: 310px;
+  margin: 0 auto;
+  padding: 24px;
+}
+
+.intro-chunk {
+  padding-top: 96px;
+  padding: 96px 0 64px 0;
+  max-width: 415px;
+}
+
+.card {
+  background: hsla(0deg, 0%, 100%, 1);
+  margin: 0 -24px;
+  padding: 24px;
+}
+
+.indented-heading {
+  padding: 16px 24px;
+  margin: -16px 0 1.5rem -32px;
+  background-color: hsla(45deg, 100%, 50%, 1);
+  border-bottom: 8px solid hsla(45deg, 100%, 40%, 1);
+  width: fit-content;
+}
